# ekos-notify

./: .gitignore  .gitmodules  configure.ac
src/: .gitignore  Makefile.am  ekosnotify.glade  frame.cpp  frame.h  main.cpp  settings.json
